[gd_scene load_steps=12 format=2]

[ext_resource path="res://image/papan.png" type="Texture" id=1]
[ext_resource path="res://font/Asdonuts.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Login.gd" type="Script" id=3]
[ext_resource path="res://scripts/Close.gd" type="Script" id=4]
[ext_resource path="res://scripts/Logout.gd" type="Script" id=5]
[ext_resource path="res://Font/Asdonuts.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[node name="foreground" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/Panel/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/Control/CenterContainer"]
margin_left = 178.0
margin_top = 100.0
margin_right = 846.0
margin_bottom = 500.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel/Control/CenterContainer/HBoxContainer"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 400 )
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 73.0
margin_right = 600.0
margin_bottom = 193.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 550.0
margin_bottom = 120.0
rect_min_size = Vector2( 500, 120 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Login to:
- compete in global leaderboard
- collect the achievements"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 209.0
margin_right = 600.0
margin_bottom = 261.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/HBoxContainer2"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 58.0
margin_top = 5.0
margin_right = 122.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "email"

[node name="LineEdit" type="LineEdit" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/HBoxContainer2"]
margin_left = 142.0
margin_right = 542.0
margin_bottom = 52.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 277.0
margin_right = 600.0
margin_bottom = 327.0

[node name="Button" type="Button" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 3 )
text = "Login"
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Control/CenterContainer/HBoxContainer"]
margin_left = 604.0
margin_right = 668.0
margin_bottom = 400.0

[node name="TextureRect2" type="TextureRect" parent="Control/Panel/Control/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true

[node name="Button" type="Button" parent="Control/Panel/Control/CenterContainer/HBoxContainer/VBoxContainer/TextureRect2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/Control/CenterContainer/HBoxContainer/VBoxContainer/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer/Button" to="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer/Button" method="_on_Button_pressed"]
[connection signal="request_completed" from="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer/HTTPRequest" to="Control/Panel/Control/CenterContainer/HBoxContainer/TextureRect/VBoxContainer/CenterContainer/Button" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Control/Panel/Control/CenterContainer/HBoxContainer/VBoxContainer/TextureRect2/Button" to="Control/Panel/Control/CenterContainer/HBoxContainer/VBoxContainer/TextureRect2/Button" method="_on_Button_pressed"]
